most of new layout

--- a/www/templates/pages/item.html
+++ b/www/templates/pages/item.html
@@ -2,7 +2,7 @@
     <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="subloc({lid: 2})">Back</button>
-        <h1 class="title">Item Name</h1>
+        <h1 class="title">Colony Name</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home"></button>
     </ion-header-bar>
@@ -27,26 +27,19 @@
         <div ng-controller="QRCtrl" class="col" style="text-align:center;">
             <h1><b>Found it?</b></h1>
             <p>
-                Take picture of the QR code
+                Enter key code
             </p>
-            
-    <qr-scanner width="400" height="300" ng-success="onSuccess(data)" ng-error="onError(error)" />
-
-            <form id="result">
-              <fieldset>
-                <legend>Result</legend>
-                <p>
-                  <label for="url">URL</label>
-                  <textarea id="url" rows="2" wrap="hard" readonly></textarea>
-                </p>
-              </fieldset>
-            </form>
+           
     
-            <div class="image-container">
-                  <img src="" id="image">
-            </div>
-          <!--button style="width:200px;" class="button button-large button-positive icon ion-ios-camera"
-                  ng-click="show()" i></button-->
+          <label class="item item-input">
+            <span class="input-label">Code:</span>
+            <input type="text"/>
+          </label>
+        <div class="row">
+            <button class="button button-large button-balanced button-block" ui-sref="mainlocs">
+                Submit
+            </button>
+        </div>
         </div>
     </ion-content>
 </ion-view>
