--- a/www/templates/pages/mainlocations.html
+++ b/www/templates/pages/mainlocations.html
@@ -6,34 +6,91 @@
     </ion-header-bar>
     <ion-content>
         <div class="list">
-            <a class="item item-thumbnail-left item-icon-right" href="#/locations/1">
+            <span onclick="window.open('#/locations/1','_self');"
+                class=" item item-text-wrap item-thumbnail-left item-icon-right">
                 <img src="img/unionstation.jpg">
-                <h2>Union Station</h2>
-                <p>some things about union station
-                    <button class="button button-clear icon ion-chevron-right" i></button>
+                <button class="button button-clear icon ion-chevron-right" i></button>
+                
+                <div><strong>Union Station</strong></div>
+                
+                <p name="address" style="padding-bottom: .2em;">
+                    30 West Pershing Road, Kansas City, MO 64108
                 </p>
-            </a>
-            <a class="item item-thumbnail-left item-icon-right" href="#/locations/2">
+                <p>
+                    Mon - Sun<br/>
+                    6am - Midnight 
+                </p>
+                <p class="text-right">
+                    <a target="_blank"
+                          href="http://www.unionstation.org/">
+                        unionstation.org
+                    </a>
+                </p>
+            </span>
+            <span onclick="window.open('#/locations/2','_self');"
+                class="item item-text-wrap item-thumbnail-left item-icon-right">
                 <img src="img/plugprojects.jpg">
-                <h2>Plug Projects</h2>
-                <p>blah
-                    <button class="button button-clear icon ion-chevron-right" i></button>
+                <button class="button button-clear icon ion-chevron-right" i></button>
+                
+                <div><strong>Plug Projects</strong></div>
+                
+                <p name="address" style="padding-bottom: .2em;">
+                    1613 Genessee St. Kansas City, MO 64102
                 </p>
-            </a>
-            <a class="item item-thumbnail-left item-icon-right" href="#/locations/3">
+                <p>
+                    Saturday<br/>
+                    10am - 5pm 
+                </p>
+                <p class="text-right">
+                    <a target="_blank"
+                        href="http://www.plugprojects.com/">
+                        plugprojects.com
+                    </a>
+                </p>
+            </span>
+            <span onclick="window.open('#/locations/3','_self');"
+                class="item item-text-wrap item-thumbnail-left item-icon-right">
                 <img src="img/anitab.jpeg">
-                <h2>Anita B. Gorman</h2>
-                <p>blah
-                    <button class="button button-clear icon ion-chevron-right" i></button>
+                <button class="button button-clear icon ion-chevron-right" i></button>
+                
+                <div><strong>Anita B. Gorman</strong></div>
+                
+                <p name="address" style="padding-bottom: .2em;">
+                    4750 Troost Ave. Kansas City, MO 64110
                 </p>
-            </a>
-            <a class="item item-thumbnail-left item-icon-right" href="#/locations/4">
-                <img src="img/maaa.jpg">
-                <h2>Mid-America Arts Alliance</h2>
-                <p>blah
-                    <button class="button button-clear icon ion-chevron-right" i></button>
+                <p>
+                    Mon - Fri<br/>
+                    8am - 5pm
                 </p>
-            </a>
+                <p class="text-right">
+                    <a target="_blank"
+                          href="http://mdc.mo.gov/regions/kansas-city/discovery-center">
+                        mdc.mo.gov/...
+                    </a>
+                </p>
+            </span>
+            <span onclick="window.open('#/locations/4','_self');"
+                class="item item-text-wrap item-thumbnail-left item-icon-right">
+                <img  style="height:100%;" src="img/maaa.jpg">
+                <button class="button button-clear icon ion-chevron-right" i></button>
+                
+                <div><strong>Mid-America Arts Alliance</strong></div>
+                
+                <p name="address" style="padding-bottom: .2em;">
+                    2018 Baltimore Ave.
+Kansas City, MO64108
+                </p>
+                <p>
+                    Mon - Fri<br/>
+                    8am - 5pm 
+                </p>
+                <p class="text-right">
+                    <a target="_blank"
+                          href="http://maaa.org/">
+                        maaa.org
+                    </a>
+                </p>
+            </span>
         </div>
     </ion-content>
 </ion-view>
