--- a/www/templates/pages/signup.html
+++ b/www/templates/pages/signup.html
@@ -2,7 +2,7 @@
 
     <ion-header-bar align-title="center" class="bar-balanced">
         <button class="button button-clear icon ion-ios-home" ui-sref="home"></button>
-        <h1 class="title">Get Started</h1>
+        <h1 class="title">Sign Up</h1>
     </ion-header-bar>
 
     <ion-content>
@@ -12,17 +12,7 @@
           </label>
         <div class="row">
             <button class="button button-large button-balanced button-block" ui-sref="mainlocs">
-                Log In
-            </button>
-        </div>
-        <div class="row">
-            <p class="col-50 col-offset-25 h3 text-center">
-                 - or -
-            </p>
-        </div>
-        <div class="row">
-            <button class="button button-large button-balanced button-block" ui-sref="signup">
-                Sign Up
+                Submit
             </button>
         </div>
     </ion-content>
