--- a/www/templates/pages/home.html
+++ b/www/templates/pages/home.html
@@ -1,7 +1,7 @@
 <ion-view>
 
     <ion-header-bar align-title="center" class="bar-balanced">
-        <h1 class="title">Lichen Scavenger Hunt</h1>
+        <h1 class="title">Urban Colonization</h1>
     </ion-header-bar>
 
     <ion-content>
@@ -14,10 +14,18 @@
             <div class="item item-text-wrap" style="border:none; margin: 20px 0;">
                 <h2>Be the first to find all the lichen colonies in Kansas City</h2>
             </div>
-
-            <button class="button button-large button-balanced" ui-sref="signin">
-                Get Started
-            </button>
+            
+            <div class="row">
+                <button
+                        class="button button-large button-balanced button-block" ui-sref="signin">
+                    Get Started
+                </button>
+            </div>
+            <div class="row">
+                <button class="button button-block" ui-sref="about">
+                    About This Project
+                </button>
+            </div>
 
         </div>
     </ion-content>
