--- a/www/templates/pages/sublocation.html
+++ b/www/templates/pages/sublocation.html
@@ -2,7 +2,7 @@
     <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="mainlocs" i>Back</button>
-        <h1 class="title">SubLocation Name</h1>
+        <h1 class="title">Location Name</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home" i></button>
     </ion-header-bar>
