--- a/www/templates/pages/locations.html
+++ b/www/templates/pages/locations.html
@@ -77,8 +77,7 @@
                 <div><strong>Mid-America Arts Alliance</strong></div>
                 
                 <p name="address" style="padding-bottom: .2em;">
-                    2018 Baltimore Ave.
-Kansas City, MO64108
+                    2018 Baltimore Ave. Kansas City, MO64108
                 </p>
                 <p>
                     Mon - Fri<br/>
