--- a/www/templates/pages/map.html
+++ b/www/templates/pages/map.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
-                  ui-sref="mainlocs" i>Back</button>
+                  ui-sref="locations" i>Back</button>
         <h1 class="title">Map</h1>
     </ion-header-bar>
 <ion-content class="has-header padding">
