--- a/www/templates/pages/signin.html
+++ b/www/templates/pages/signin.html
@@ -11,7 +11,7 @@
             <input type="text"/>
           </label>
         <div class="row">
-            <button class="button button-large button-balanced button-block" ui-sref="mainlocs">
+            <button class="button button-large button-balanced button-block" ui-sref="locations">
                 Log In
             </button>
         </div>
