--- a/www/templates/pages/colony.html
+++ b/www/templates/pages/colony.html
@@ -1,8 +1,8 @@
 <ion-view>
-    <ion-header-bar align-title="center" class="bar-balanced">
+    <ion-header-bar ng-controller="LocCtrl" align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
-                  ui-sref="subloc({lid: 2})">Back</button>
-        <h1 class="title">Colony Name</h1>
+                  ui-sref="location({lid: {{lid}}})">Back</button>
+        <h1 class="title">{{colony}}</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home"></button>
     </ion-header-bar>
@@ -24,22 +24,17 @@
 
         </div>
         
-        <div ng-controller="QRCtrl" class="col" style="text-align:center;">
+        <div class="col" style="text-align:center;">
             <h1><b>Found it?</b></h1>
-            <p>
-                Enter key code
-            </p>
            
     
           <label class="item item-input">
-            <span class="input-label">Code:</span>
+            <span class="input-label">Key Code:</span>
             <input type="text"/>
           </label>
-        <div class="row">
             <button class="button button-large button-balanced button-block" ui-sref="mainlocs">
                 Submit
             </button>
-        </div>
         </div>
     </ion-content>
 </ion-view>
