--- a/www/templates/pages/colony.html
+++ b/www/templates/pages/colony.html
@@ -1,40 +1,43 @@
 <ion-view>
-    <ion-header-bar ng-controller="LocCtrl" align-title="center" class="bar-balanced">
+    <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="location({lid: {{lid}}})">Back</button>
-        <h1 class="title">{{colony}}</h1>
+        <h1 class="title">{{colony.name}}</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home"></button>
     </ion-header-bar>
     <ion-content>
-        <div class="list card" style="margin:2em;">
-
-            <div class="item item-body">
-                <img class="full-image" src="img/lichen1.jpg">
-                
-                <div class="padding">
-                  <h1 style="text-align:left;">Hint</h1>
-                  <p>
-                      This can be found hanging high above with a sunny
-                      disposition. They were named in Latin for their
-                      "slit-end" appearance.
-                  </p>
+        <ion-slide-box show-pager="true">
+            <ion-slide>
+                <div class="list card" >
+                    <div class="item item-body">
+                        <img class="full-image" src="img/colonies/{{colony.img}}.jpg">
+                        <div class="row text-center">
+                            <h3>FOUND IT!</h3>
+                        </div>
+                        <div class="padding row">
+                            <p>
+                                some stuff and what nots.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-        </div>
-        
-        <div class="col" style="text-align:center;">
-            <h1><b>Found it?</b></h1>
-           
-    
-          <label class="item item-input">
-            <span class="input-label">Key Code:</span>
-            <input type="text"/>
-          </label>
-            <button class="button button-large button-balanced button-block" ui-sref="mainlocs">
-                Submit
-            </button>
-        </div>
+            </ion-slide>
+            <ion-slide>
+                <div class="list card">
+                    <div class="item item-body">
+                        <img class="full-image" src="img/colonies/{{colony.img}}.jpg">
+                        <div class="row text-center">
+                            <h3>another</h3>
+                        </div>
+                        <div class="row padding ">
+                            <p>
+                                lichens
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </ion-slide>
+        </ion-slide-box>
     </ion-content>
 </ion-view>
