--- a/www/templates/pages/location.html
+++ b/www/templates/pages/location.html
@@ -2,72 +2,65 @@
     <ion-header-bar align-title="center" class="bar-balanced">
           <button class="button button-clear icon-left ion-chevron-left"
                   ui-sref="locations" i>Back</button>
-        <h1 class="title">{{locname}}</h1>
+        <h1 class="title">{{loc.name}}</h1>
           <button class="button button-clear icon-right ion-ios-home"
                   ui-sref="home" i></button>
     </ion-header-bar>
     <ion-content>
         <div class="row">
-            <div class="col col-50" >
-                <div class="list card" style="margin:0;">
-                    <a class="item item-image" ui-sref="colony({lid: {{lid}}, cid:1})">
-                        <img src="img/lichen1.jpg" style="height:8em;width:8em;">
-                    </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                        Teloschistes Chrysopthalmus
-                    </p>
-                </div>
+            <div class="col col-50">
+                <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
+                    <div class="list card" style="margin:0; width:100%; height:100%;">
+                        <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <img src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:8em;">
+                        </a>
+                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                            {{colony.name}}
+                        </p>
+                    </div>
+                </div></div>
             </div>
-
-            <div class="col col-50" >
-                <div class="list card" style="margin:0; width:100%; height:100%;">
-                    <a class="item item-image" ui-sref="colony({lid: {{lid}}, cid:2})">
-                        <img src="img/lichen2.jpg" style="height:8em;width:8em;">
-                    </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                        Teloschistes Chrysopthalmus
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col col-50" >
-                <div class="list card" style="margin:0; width:100%; height:100%;">
-                    <a class="item item-image" ui-sref="colony({lid: {{lid}}, cid:3})">
-                        <img src="img/lichen3.jpg" style="height:8em;width:8em;">
-                    </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                        Teloschistes Chrysopthalmus
-                    </p>
-                </div>
-            </div>
-            <div class="col col-50" >
-                <div class="list card" style="margin:0;">
-                    <a class="item item-image" ui-sref="colony({lid: {{lid}}, cid:4})">
-                        <img src="img/lichen4.jpg" style="height:8em; width:8em;">
-                    </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                        Teloschistes Chrysopthalmus
-                    </p>
-                </div>
+            <div class="col col-50">
+                <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
+                    <div class="list card" style="margin:0; width:100%; height:100%;">
+                        <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <img src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:8em;">
+                        </a>
+                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                            {{colony.name}}
+                        </p>
+                    </div>
+                </div></div>
             </div>
         </div>
         <div class="item item-divider">
             Discovered Lichens
         </div>
         <div class="row">
-            <div class="col col-50" >
-                <div class="list card" style="margin:0;">
-                    <a class="item item-image" ui-sref="colony({lid: {{lid}}, cid:5})">
-                        <img src="img/lichen5.jpg" style="height:8em; width:8em;">
-                    </a>
-                    <p class="item item-text-wrap" style="border:none; padding: 5px 3px; text-align: center;">
-                        Teloschistes Chrysopthalmus
-                    </p>
-                </div>
+            <div class="col col-50">
+                <div ng-repeat="colony in undiscovered"><div ng-if="$even" class="row">
+                    <div class="list card" style="margin:0; width:100%; height:100%;">
+                        <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <img src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:8em;">
+                        </a>
+                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                            {{colony.name}}
+                        </p>
+                    </div>
+                </div></div>
             </div>
-            
+            <div class="col col-50">
+                <div ng-repeat="colony in undiscovered"><div ng-if="$odd" class="row">
+                    <div class="list card" style="margin:0; width:100%; height:100%;">
+                        <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <img src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:8em;">
+                        </a>
+                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                            {{colony.name}}
+                        </p>
+                    </div>
+                </div></div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
