--- a/www/templates/pages/signup.html
+++ b/www/templates/pages/signup.html
@@ -8,10 +8,10 @@
     <ion-content>
           <label class="item item-input">
             <span class="input-label">Email:</span>
-            <input type="text"/>
+            <input ng-keyup="$event.keyCode == 13 && register(username)" type="text" ng-model="username"/>
           </label>
         <div class="row">
-            <button class="button button-large button-balanced button-block" ui-sref="locations">
+            <button ng-click="register(username)" class="button button-large button-balanced button-block">
                 Submit
             </button>
         </div>
