--- a/www/templates/pages/colony.html
+++ b/www/templates/pages/colony.html
@@ -11,7 +11,7 @@
             <ion-slide>
                 <div class="list card" >
                     <div class="item item-body">
-                        <img class="full-image" src="img/colonies/{{colony.img}}.jpg">
+                        <img class="full-image" ng-src="img/colonies/{{colony.img}}.jpg">
                         <div class="row text-center">
                             <h3>FOUND IT!</h3>
                         </div>
