--- a/www/templates/pages/idkcolony.html
+++ b/www/templates/pages/idkcolony.html
@@ -9,7 +9,7 @@
     <ion-content>
         <div class="list card" style="margin:2em;">
             <div class="item item-body">
-                <img class="full-image" src="img/colonies/{{colony.imgsil}}.jpg">
+                <img class="full-image" ng-src="img/colonies/{{colony.imgsil}}.jpg">
                 <div class="padding">
                   <h1 style="text-align:left;">Hint</h1>
                   <p>{{colony.hint}}</p>
