--- a/www/templates/pages/location.html
+++ b/www/templates/pages/location.html
@@ -12,7 +12,7 @@
                 <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
                     <div class="list card" style="margin:0; width:100%; height:100%;">
                         <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:8em;">
+                            <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
                         </a>
                         <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                             {{colony.name}}
@@ -24,7 +24,7 @@
                 <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
                     <div class="list card" style="margin:0; width:100%; height:100%;">
                         <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:8em;">
+                            <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
                         </a>
                         <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                             {{colony.name}}
@@ -41,7 +41,7 @@
                 <div ng-repeat="colony in undiscovered"><div ng-if="$even" class="row">
                     <div class="list card" style="margin:0; width:100%; height:100%;">
                         <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:8em;">
+                            <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
                         </a>
                         <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                             {{colony.name}}
@@ -53,7 +53,7 @@
                 <div ng-repeat="colony in undiscovered"><div ng-if="$odd" class="row">
                     <div class="list card" style="margin:0; width:100%; height:100%;">
                         <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:8em;">
+                            <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
                         </a>
                         <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
                             {{colony.name}}
