--- a/www/templates/pages/locations.html
+++ b/www/templates/pages/locations.html
@@ -1,5 +1,6 @@
 <ion-view>
     <ion-header-bar align-title="center" class="bar-balanced">
+        <button class="button button-clear icon ion-ios-home" ui-sref="home"></button>
         <h1 class="title">Locations</h1>
         <button class="button button-clear icon ion-android-map"
                 ui-sref="map" i></button>
@@ -9,7 +10,7 @@
             <span ng-repeat="loc in locations track by $index"
                   ui-sref="location({lid: {{$index+1}}})"
                 class=" item item-text-wrap item-thumbnail-left item-icon-right">
-                <img src="img/locations/{{loc.img}}">
+                <img  ng-src="img/locations/{{loc.img}}">
                 <button class="button button-clear icon ion-chevron-right" i></button>
                 
                 <div><strong>{{loc.name}}</strong></div>
