--- a/www/templates/pages/signup.html
+++ b/www/templates/pages/signup.html
@@ -8,12 +8,15 @@
     <ion-content>
           <label class="item item-input">
             <span class="input-label">Email:</span>
-            <input ng-keyup="$event.keyCode == 13 && register(username)" type="text" ng-model="username"/>
+            <input name="email" ng-keyup="$event.keyCode == 13 && register(username)" type="text" ng-model="username"/>
           </label>
         <div class="row">
             <button ng-click="register(username)" class="button button-large button-balanced button-block">
                 Submit
             </button>
+        </div>
+        <div class="row text-center">
+            <div >{{signupMsg}}</div>
         </div>
     </ion-content>
 </ion-view>
