--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,15 +7,49 @@
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
 }
+.overlay{
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 10px;
+    height: 50%;
+    width: 100%;
+    color:white;
+}
+#mainContent{
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 10px;
+    color:white;
+}
+#mainContent a{
+    color:white;
+}
+#mainContent a:visited{
+    color: #72A84E;
+}
+.locImg{
+    position: absolute;
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);
+    height: 200px;
+    width:100%;
+    background-image:url('../img/locations/maaa.jpg');
+    background-size:100% 100%;
+    background-repeat:no-repeat;
+}
+.item{
+    background-size:100% 100%;
+    background-repeat:no-repeat;
+}
 
 div .times:not(:first-child){
-  border-left: 1px dotted grey;
+  border-left: 1px dotted #28a54c;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
-
 
 .hidden {
   display: none !important;
