--- a/www/css/style.css
+++ b/www/css/style.css
@@ -55,26 +55,17 @@ div .times:not(:first-child){
   display: none !important;
   visibility: hidden !important;
 }
-
-
-.chart {
-    background: #eee;
-    padding: 3px;
-}
-
-.chart div {
-  width: 0;
-  transition: all 1s ease-out;
-  -moz-transition: all 1s ease-out;
-  -webkit-transition: all 1s ease-out;
-}
-
-.chart div {
-  font: 10px sans-serif;
-  background-color: steelblue;
-  text-align: right;
-  padding: 3px;
-  margin: 5px;
-  color: white;
-  box-shadow: 2px 2px 2px #666;
-}
+    .ac-tooltip {
+            color: black;
+            border: 2px solid rgba(200,200,0,0.8);
+            background-color: rgba(200,200,0,0.5);
+        }
+        #chart1 .ac-legend-box {
+            border-radius: 10px;
+        }
+        	[ac-chart] {
+			float:left;
+			width: 100%;
+			height: 100%;
+			margin: 0 1%;
+		}
