--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,11 +7,47 @@
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
 }
+.white{
+    color:white;
+}
+.sarah-green-header{
+  border-color: #5a853e;
+  background-color: #1D5409;
+  background-image: linear-gradient(0deg, #5a853e, #5a853e 50%, transparent 50%);
+  color: #fff;
+}
+.sarah-green-1{
+    background-color: #A2A74E;
+    color: #fff;
+}
+.modal{
+    display: flex;
+    align-items: center;
+}
+.modal .col:first-child{
+    background-color: #D9D9D9;
+}
+.margin-left{
+    margin-left: 30px;
+}
+.overtxt{
+  position: absolute;
+  background-color: rgba(0,0,0,0.3);
+  bottom: 0em;
+  width:100%;
+  height: auto;
+}
+.bggry{
+    background-color: #F5F5F5;
+}
 .overlay{
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.3);
     border-radius: 10px;
     height: 50%;
     width: 100%;
+    color:white;
+}
+.overlay-txt{
     color:white;
 }
 #mainContent{
@@ -50,7 +86,9 @@ div .times:not(:first-child){
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
-
+.font-ital{
+    font-style:italic;
+}
 .hidden {
   display: none !important;
   visibility: hidden !important;
@@ -69,3 +107,5 @@ div .times:not(:first-child){
 			height: 100%;
 			margin: 0 1%;
 		}
+                
+                
